--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
     <title>{{ name }}'s Watchlist</title>
 </head>
 <body>
-    <h2>{{ name }}'s Watchlist</h2>
-    <p>{{ movies|length }} Titles</p>{# 使用length 过滤器获取movies 变量的长度#}
-    <ul>
-        {% for movie in movies %} {# 迭代movies变量 #}
+<h2>
+    <img alt="Avatar" class="avatar" src="{{ url_for('static',filename='images/avatar.png') }}">
+    {{ name }}'s Watchlist
+</h2>
+<p>{{ movies|length }} Titles</p>{# 使用length 过滤器获取movies 变量的长度#}
+<ul class="movie-list">
+    {% for movie in movies %} {# 迭代movies变量 #}
         <li>{{ movie.title }} - {{ movie.year }}</li>{# 等同于movie['title'] #}
-        {% endfor %} {# 使用endfor 标签结束for语句 #}
-    </ul>
-    <footer>
-        <small>&copy;2018<a href="http://helloflask.com/tutorial">HelloFlask</a> </small>
-    </footer>
+    {% endfor %} {# 使用endfor 标签结束for语句 #}
+</ul>
+<img alt="Walking Totoro" class="totoro" src="{{ url_for('static',filename='images/totoro.gif') }}">
+<footer>
+    <small>&copy;2018<a href="http://helloflask.com/tutorial">HelloFlask</a></small>
+</footer>
 </body>
 </html>
